# causal-graph

./: .coveragerc  .env  .fast_fit_pipeline.yaml  .fast_predict_pipeline.yaml  .gitignore  .travis.yml  CHANGELOG  LICENSE.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  requirements.txt  setup.cfg  setup.py
causalexplain/: __init__.py  __main__.py  causalexplainer.py
causalgraph/: .predict_pipeline.yaml  __init__.py  __main__.py  _template.py  requirements.txt
data/: generated_10vars_gp_add_0.csv  generated_10vars_gp_add_1.csv  generated_10vars_gp_add_2.csv  generated_10vars_gp_add_3.csv  generated_10vars_gp_add_4.csv  generated_10vars_gp_add_6.dot  generated_10vars_gp_mix_0.csv  generated_10vars_gp_mix_1.csv  generated_10vars_gp_mix_2.csv  generated_10vars_gp_mix_3.csv  generated_10vars_gp_mix_4.csv  generated_10vars_gp_mix_5.csv  generated_10vars_gp_mix_5.dot  generated_10vars_gp_mix_6.csv  generated_10vars_gp_mix_7.csv  generated_10vars_gp_mix_8.csv  generated_10vars_gp_mix_8.dot  generated_10vars_gp_mix_9.csv  generated_10vars_gp_mix_9.dot  generated_10vars_linear_0.csv  generated_10vars_linear_0.dot  generated_10vars_linear_1.csv  generated_10vars_linear_2.csv  generated_10vars_linear_4.csv  generated_10vars_linear_5.csv  generated_10vars_linear_7.csv  generated_10vars_polynomial_0.csv  generated_10vars_polynomial_0.dot  generated_10vars_polynomial_1.csv  generated_10vars_polynomial_2.csv  generated_10vars_polynomial_2.dot  generated_10vars_polynomial_3.csv  generated_10vars_polynomial_3.dot  generated_10vars_polynomial_4.csv  (+151 more)
doc/: api.rst  conf.py
(+568 files in other folders)
