[metadata]
name = causalgraph
version = attr: causalgraph._version.__version__
description = A package to extract the causal graph from continuous tabular data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/renero/causalgraph
author = J. Renero
author_email = jesus.renero@gmail.com
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
keywords = causal inference, causal graph, data science

[options]
packages = find:
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    scikit-learn>=0.24.0
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.extras_require]
tests =
    pytest
    pytest-cov
docs =
    sphinx
    sphinx-gallery
    sphinx_rtd_theme
    numpydoc
    matplotlib

[options.package_data]
* = *.txt, *.md

; [options.project_urls]
; Source Code = https://github.com/renero/causalgraph
; Documentation = https://github.com/renero/causalgraph/wiki
